@@ -13,6 +13,7 @@ Revision history for Dist-Mgr
       being added to Makefile.PL (fixes #23; fixes #24)
     - Prevent the addition of multiple CI badge links (fixes #22)
     - Each command in distmgr binary have separate help sections (closes #30)
+    - all make* functions have verbose option to print all output (closes #35)
 
 1.00    2020-12-30
     - Fix issue where ABSTRACT was being pulled from one of the test
